--- a/sass/components/_client.scss
+++ b/sass/components/_client.scss
@@ -20,6 +20,10 @@
         display: flex;
         flex-wrap: wrap;
 
+        @media screen and(min-width:768px){
+        margin-bottom: 37px;    
+        }
+
         @media screen and(min-width:1200px){
             justify-content: space-between;
         }
