--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,27 +1,73 @@
 .hero {
     padding-bottom: 0px;
     text-align: center;
-    max-width: 480px;
-    height: 400px;
     margin-left: auto;
     margin-right: auto;
+    background-position: center;
+
+    @media screen and(max-width:767px){
     background-image: linear-gradient(
         to right,
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4) ),
-        url(../images/hero-fon-min.jpg);
-    background-color: #c4c4c4;
-    background-position: center;
-    background-size: cover;
+        url(/images/header-mob-480-1x.jpg);
+    background-color: #c4c4c4;   
+    max-width: 480px;
+    height: 400px;
+    background-size: 480px 400px;
 
-    @media screen and(min-width:768px) {
-        max-width: 768px;
-        height: 400px;
+    @media screen and (min-divice-pixel-ration: 2),
+        (min-resolution: 192dpi),
+        (min-resolution: 2dppx) {
+        background-image: linear-gradient(
+            to right,
+            rgba(47, 48, 58, 0.4),
+            rgba(47, 48, 58, 0.4) ),
+            url(/images/header-mob-960-2x.jpg);}
     }
 
+
+    @media screen and(min-width:768px) {
+        background-image: linear-gradient(
+        to right,
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4) ),
+        url(/images/header-tab-768-1x.jpg);
+    background-color: #c4c4c4;   
+        max-width: 768px;
+        height: 400px;
+    background-size: 768px 400px;
+
+    @media screen and (min-divice-pixel-ration: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    background-image: linear-gradient(
+        to right,
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4) ),
+        url(/images/header-tab-1536-2x.jpg);}
+        }
+
     @media screen and(min-width:1200px) {
+        background-image: linear-gradient(
+        to right,
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4) ),
+        url(/images/hero-fon-1600-x1.jpg);
+    background-color: #c4c4c4;   
         max-width: 1600px;
         height: 600px;
+    background-size: 1600px 600px;
+
+    @media screen and (min-divice-pixel-ration: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    background-image: linear-gradient(
+        to right,
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4) ),
+        url(/images/header-desk-3200-2x.jpg);}
+        
     }
 
 
