--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -10,7 +10,7 @@
         to right,
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4) ),
-        url(/images/header-mob-480-1x.jpg);
+        url(./images/header-mob-480-1x.jpg);
     background-color: #c4c4c4;   
     max-width: 480px;
     height: 400px;
@@ -23,7 +23,7 @@
             to right,
             rgba(47, 48, 58, 0.4),
             rgba(47, 48, 58, 0.4) ),
-            url(/images/header-mob-960-2x.jpg);}
+            url(./images/header-mob-960-2x.jpg);}
     }
 
 
@@ -32,7 +32,7 @@
         to right,
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4) ),
-        url(/images/header-tab-768-1x.jpg);
+        url(./images/header-tab-768-1x.jpg);
     background-color: #c4c4c4;   
         max-width: 768px;
         height: 400px;
@@ -45,7 +45,7 @@
         to right,
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4) ),
-        url(/images/header-tab-1536-2x.jpg);}
+        url(./images/header-tab-1536-2x.jpg);}
         }
 
     @media screen and(min-width:1200px) {
@@ -53,7 +53,7 @@
         to right,
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4) ),
-        url(/images/hero-fon-1600-x1.jpg);
+        url(./images/hero-fon-1600-x1.jpg);
     background-color: #c4c4c4;   
         max-width: 1600px;
         height: 600px;
@@ -66,7 +66,7 @@
         to right,
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4) ),
-        url(/images/header-desk-3200-2x.jpg);}
+        url(./images/header-desk-3200-2x.jpg);}
         
     }
 
