--- a/css/main.css
+++ b/css/main.css
@@ -557,7 +557,7 @@ ul {
 
 @media screen and (max-width: 767px) {
   .hero {
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(./images/header-mob-480-1x.jpg);
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/header-mob-480-1x.jpg);
     background-color: #c4c4c4;
     max-width: 480px;
     height: 400px;
@@ -567,13 +567,13 @@ ul {
 
 @media screen and (max-width: 767px) and (min-divice-pixel-ration: 2), screen and (max-width: 767px) and (min-resolution: 192dpi), screen and (max-width: 767px) and (min-resolution: 2dppx) {
   .hero {
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(./images/header-mob-960-2x.jpg);
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/header-mob-960-2x.jpg);
   }
 }
 
 @media screen and (min-width: 768px) {
   .hero {
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(./images/header-tab-768-1x.jpg);
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/header-tab-768-1x.jpg);
     background-color: #c4c4c4;
     max-width: 768px;
     height: 400px;
@@ -583,13 +583,13 @@ ul {
 
 @media screen and (min-width: 768px) and (min-divice-pixel-ration: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
   .hero {
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(./images/header-tab-1536-2x.jpg);
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/header-tab-1536-2x.jpg);
   }
 }
 
 @media screen and (min-width: 1200px) {
   .hero {
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(./images/hero-fon-1600-x1.jpg);
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-fon-1600-x1.jpg);
     background-color: #c4c4c4;
     max-width: 1600px;
     height: 600px;
@@ -599,7 +599,7 @@ ul {
 
 @media screen and (min-width: 1200px) and (min-divice-pixel-ration: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
   .hero {
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(./images/header-desk-3200-2x.jpg);
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/header-desk-3200-2x.jpg);
   }
 }
 
@@ -800,6 +800,10 @@ ul {
   min-width: 205px;
   color: #ffffff;
   z-index: 1;
+}
+
+.work__sectiom {
+  padding-top: 0;
 }
 
 @media screen and (max-width: 1199px) {
