--- a/sass/components/_positive-features.scss
+++ b/sass/components/_positive-features.scss
@@ -1,5 +1,8 @@
 .positive-features {
     padding-bottom: 60px;
+
+    @media screen and(min-width:1200px){
+      padding-bottom: 0;}
     
     &__item {
       @media screen and(min-width:768px){
